Updated the README and the HTML to include important links and such.

--- a/GGC-Hackers.html
+++ b/GGC-Hackers.html
@@ -93,6 +93,12 @@
   <li>Refine our filtering of the data - this would ensure that we only have quality inputs that would influence the decision making power of our model.</li>
 </ul>
 
+<h2>Exploration</h2>
+<ul>
+  <li><img src="image1.jpg" alt="Image 1"></li>
+  <li><img src="image2.jpg" alt="Image 2"></li>
+</ul>
+
 <h2>Outcomes of the Analysis and Model</h2>
 <p>Using the chosen play-by-play data from 2018 - 2022 NFL Football seasons for training, and the 2023 season our model was able to predict the outcome of a game accurately __% of the time with the top __ KPIs and __% accuracy with the top __ KPIs.</p>
 
@@ -104,6 +110,12 @@
   <li><a href="https://www.pro-football-reference.com/years/">Scores and Winners by Game</a></li>
   <li><a href="https://www.kaggle.com/datasets/cviaxmiwnptr/nfl-team-stats-20022019-espn">NFL Team Stats</a></li>
   <li>List of Super Bowl Champions</li>
+</ul>
+
+<h2>Links to Project</h2>
+<ul>
+  <li><a href="https://github.com/Pratik-Chaudhari-ggc/GT-Hacklytics">Project Overview Website</a></li>
+  <li><a href="https://htmlpreview.github.io/?https://github.com/Pratik-Chaudhari-ggc/GT-Hacklytics/blob/main/GGC-Hackers.html">Our Github Repo</a></li>
 </ul>
 
 </body>
