--- a/GGC-Hackers.html
+++ b/GGC-Hackers.html
@@ -95,12 +95,16 @@
 
 <h2>Exploration</h2>
 <ul>
-  <li><img src="image1.jpg" alt="Image 1"></li>
-  <li><img src="image2.jpg" alt="Image 2"></li>
+  <li><img src="Images\cum_explained_var.png" alt="Cumulative_Explained_Variance"></li>
+  <li><img src="Images\PC1_loading_scores.png" alt="PC1_Loading_Scores"></li>
+  <li><img src="Images\cum_abs_loadings.jpg" alt="Cumulative_Absolute_Loadings"></li>
+  <li><img src="Images\rfc_report.jpg" alt="RFC_Report"></li>
+  <li><img src="Images\dtc_report.jpg" alt="DTC_Report"></li>
 </ul>
 
 <h2>Outcomes of the Analysis and Model</h2>
-<p>Using the chosen play-by-play data from 2018 - 2022 NFL Football seasons for training, and the 2023 season our model was able to predict the outcome of a game accurately __% of the time with the top __ KPIs and __% accuracy with the top __ KPIs.</p>
+<p>Using the chosen play-by-play data from 2018 - 2022 NFL Football seasons for training, and the 2023 season our model was able to predict the outcome of a game accurately 65% of the time with top 25% of loadings based on absolute cumulative sum.
+</p>
 
 <p>With more data for further training, we believe that our model could be used to accurately determine the outcome of games in real-time as the game progresses.</p>
 
@@ -116,6 +120,7 @@
 <ul>
   <li><a href="https://github.com/Pratik-Chaudhari-ggc/GT-Hacklytics">Project Overview Website</a></li>
   <li><a href="https://htmlpreview.github.io/?https://github.com/Pratik-Chaudhari-ggc/GT-Hacklytics/blob/main/GGC-Hackers.html">Our Github Repo</a></li>
+  <li><a href="https://en.wikipedia.org/wiki/List_of_Super_Bowl_champions">Our Github Repo</a></li>
 </ul>
 
 </body>
