Finalized visualizations for the website.

--- a/GGC-Hackers.html
+++ b/GGC-Hackers.html
@@ -95,11 +95,13 @@
 
 <h2>Exploration</h2>
 <ul>
-  <li><img src="Images\cum_explained_var.png" alt="Cumulative_Explained_Variance"></li>
-  <li><img src="Images\PC1_loading_scores.png" alt="PC1_Loading_Scores"></li>
-  <li><img src="Images\cum_abs_loadings.jpg" alt="Cumulative_Absolute_Loadings"></li>
-  <li><img src="Images\rfc_report.jpg" alt="RFC_Report"></li>
-  <li><img src="Images\dtc_report.jpg" alt="DTC_Report"></li>
+  <img src="Images\cum_explained_var.png" alt="Cumulative_Explained_Variance">
+  <img src="Images\PC1_loading_scores.png" alt="PC1_Loading_Scores">
+  <img src="Images\cum_abs_loadings.jpg" alt="Cumulative_Absolute_Loadings">
+  <li>Random Forest Classification</li>
+  <img src="Images\rfc_report.jpg" alt="RFC_Report">
+  <li>Decision Tree Classification</li>
+  <img src="Images\dtc_report.jpg" alt="DTC_Report">
 </ul>
 
 <h2>Outcomes of the Analysis and Model</h2>
