Future Improvements Continued.

--- a/GGC-Hackers.html
+++ b/GGC-Hackers.html
@@ -108,6 +108,10 @@
 <ul>
   <li>We would include additional sets of data for attempts to make the model more accurate, since it would have more data and potentially be able to recognize the most important features easier.</li>
   <li>Refine our filtering of the data - this would ensure that we only have quality inputs that would influence the decision making power of our model.</li>
+  <li>Refine our filtering of the data - this would ensure that we only have quality inputs that would influence the decision making power of our model.</li>
+  <li>Refine our filtering of the data - this would ensure that we only have quality inputs that would influence the decision making power of our model.</li>
+  <li>Create different models using different algorithms (such as SVM or Naive Bayes) to imporve the precision metric of our prediction.</li>
+  <li>Use additional metrics to measure success of model area under curve of ROC.</li>
 </ul>
 
 <h2>Dataset Sources</h2>
@@ -115,7 +119,7 @@
   <li><a href="https://nflsavant.com/about.php">Play by Play Datasets</a></li>
   <li><a href="https://www.pro-football-reference.com/years/">Scores and Winners by Game</a></li>
   <li><a href="https://www.kaggle.com/datasets/cviaxmiwnptr/nfl-team-stats-20022019-espn">NFL Team Stats</a></li>
-  <li>List of Super Bowl Champions</li>
+  <li><a href="https://en.wikipedia.org/wiki/List_of_Super_Bowl_champions"></a>List of Super Bowl Champions</li>
 </ul>
 
 <h2>Links to Project</h2>
