--- a/GGC-Hackers.html
+++ b/GGC-Hackers.html
@@ -119,7 +119,7 @@
   <li><a href="https://nflsavant.com/about.php">Play by Play Datasets</a></li>
   <li><a href="https://www.pro-football-reference.com/years/">Scores and Winners by Game</a></li>
   <li><a href="https://www.kaggle.com/datasets/cviaxmiwnptr/nfl-team-stats-20022019-espn">NFL Team Stats</a></li>
-  <li><a href="https://en.wikipedia.org/wiki/List_of_Super_Bowl_champions"></a>List of Super Bowl Champions</li>
+  <li><a href="https://en.wikipedia.org/wiki/List_of_Super_Bowl_champions">List of Super Bowl Champions</a></li>
 </ul>
 
 <h2>Links to Project</h2>
