--- a/GGC-Hackers.html
+++ b/GGC-Hackers.html
@@ -124,9 +124,8 @@
 
 <h2>Links to Project</h2>
 <ul>
-  <li><a href="https://github.com/Pratik-Chaudhari-ggc/GT-Hacklytics">Project Overview Website</a></li>
-  <li><a href="https://htmlpreview.github.io/?https://github.com/Pratik-Chaudhari-ggc/GT-Hacklytics/blob/main/GGC-Hackers.html">Our Github Repo</a></li>
-  <li><a href="https://en.wikipedia.org/wiki/List_of_Super_Bowl_champions">Our Github Repo</a></li>
+  <li><a href="https://github.com/Pratik-Chaudhari-ggc/GT-Hacklytics">Github Repo</a></li>
+  <li><a href="https://htmlpreview.github.io/?https://github.com/Pratik-Chaudhari-ggc/GT-Hacklytics/blob/main/GGC-Hackers.html">Our Project Overview Website</a></li>
 </ul>
 
 </body>
